//
//  Constants+AIEngine.swift
//  HamztWaslApp
//
//  Created by Nour Gweda on 17/02/2025.
//

import Foundation

extension Constants {
    struct AIEngineConstants {
        static let searchForEvents = "Search For Events"
        static let enterSearchCriteria = "Enter all your search criteria, "
        static let describeYourEventAndLetAI = " Describe your \n perfect event and let our AI do the rest!🚀"
        static let selectInterests = "Select Interests"
        static let selectLocation = "Select Location"
        static let selectDate = "Select Date"
        static let describeYourEvent = "Describe your event(e.g., 'A cozy jazz night in Cairo')"
        static let submit = "Submit"
        static let or = "OR"
        static let save = "Save"
        static let searchForCountries = "Search for country"
        static let pleaseFillTheField = "Kindly complete all three fields or provide a prompt to proceed."
        static let match = " Match"
        static let interestsKeyword = "Interests:"
        static let locationKeyword = "Location:"
        static let dateKeyword = "Date:"
        static let noteKeyword = "note"
        static let clear = "Clear"
    }
}

